agregue un cambio con el creador de la pagina

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
                     <li><a href="#">CONTACTO</a>
                         <ul>
                             <li><a href="#">WHATSAPP</a></li>
-                            <li><a href="#">INSTAGRAM</a></li>
-                            <li><a href="#">FACEBOOK</a></li>
+                            <li><a href="https://www.instagram.com/dkr.producer/" target="_blank">INSTAGRAM</a></li>
+                            <li><a href="https://www.facebook.com/profile.php?id=61550632438613" target="_blank">FACEBOOK</a></li>
                         </ul>
                     </li>
                 </ul>
